hw5_lab8/tests/errors/lex_unclosed_char.kt
fun main() {
    val c = 'AB
}
